# local-rag-doc-retrieval

./: LICENSE  README.md  pyproject.toml  requirements.txt
data/documents/: PLACEHOLDER.md
src/doc_retrieval/: __init__.py  __main__.py  cli.py  config.py  messages.py
src/doc_retrieval/ingestion/: __init__.py  processor.py
src/doc_retrieval/retrieval/: __init__.py  engine.py
src/doc_retrieval/ui/: __init__.py  gradio_app.py
src/doc_retrieval/vectorstore/: __init__.py  chroma.py
