[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-retrieval"
version = "0.1.0"
description = "Document retrieval system using local LLMs and vector database"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

# IMPORTANT:
# Dependencies are managed via requirements.txt
dependencies = []

[project.optional-dependencies]
dev = []

[project.scripts]
doc-retrieval = "doc_retrieval.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
